--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,6 @@ project(nvidia-pstated C)
 # Find the CUDAToolkit package
 find_package(CUDAToolkit REQUIRED COMPONENTS nvml)
 
-# Declare the nvapi package
-FetchContent_Declare(
-  nvapi
-
-  URL      https://download.nvidia.com/XFree86/nvapi-open-source-sdk/R555-OpenSource.tar
-  URL_HASH SHA256=71339c274a6a633f19b6bd358c7f3045063c6bc106b7dc488aaa7360a6d2b9d7
-)
-
-# Download and make the nvapi content available for use
-FetchContent_MakeAvailable(nvapi)
-
 # Define the executable target
 add_executable(nvidia-pstated
   src/main.c
@@ -30,7 +19,7 @@ add_executable(nvidia-pstated
 
 # Include directories for the target
 target_include_directories(nvidia-pstated SYSTEM PRIVATE
-  ${nvapi_SOURCE_DIR}/R555-OpenSource
+  R555-OpenSource
 )
 
 # Link libraries
